# max31865

./: CMakeLists.txt  LICENSE
src/: ConfigBuilder.h  Thermometer.cpp  Thermometer.h  main.cpp
